k8s_templates/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    # Example implement service
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api_auth/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8081
